--- a/index.html
+++ b/index.html
@@ -5,14 +5,72 @@
     <title>d3</title>
   </head>
   <body>
-    <!-- <input type="button" name="name" value="addData" id="addData">
-    <input type="button" name="name" value="removeData" id="removeData"> -->
+    <input type="button" name="name" value="addData" id="addData">
+    <input type="button" name="name" value="removeData" id="removeData">
 
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="data.js" charset="utf-8"></script>
     <script type="text/javascript">
 
+    //Width and height
+    var w = 600;
+    var h = 250;
+    
+    var xScale = d3.scale.ordinal() //an ordinal scale instead of linear
+                  .domain(d3.range(dataset.length))
+                  .rangeRoundBands([0, w], 0.05); //discreet outputs are rounded to the nearest integer
 
+    var yScale = d3.scale.linear()
+                  .domain([0, d3.max(dataset)])
+                  .range([0, h]);
+
+    //Create SVG element
+    var svg = d3.select("body")
+              .append("svg")
+              .attr("width", w)
+              .attr("height", h);
+
+    svg.selectAll("rect")
+      .data(dataset)
+      .enter()
+      .append("rect")
+      .attr({
+          x: function(d, i) { return xScale(i); }, //bar width
+          y: function(d) { return h - yScale(d); }, //sets height and flips it
+          width: xScale.rangeBand(), //width in between bars
+          height: function(d) { return yScale(d) },
+          fill: function(d) { return "rgb(0, 0, " + (d * 10) + ")"; }
+     })
+     .on("mouseover", function(d) {
+         //Get this bar's x/y values, then augment for the tooltip
+       var xPosition = parseFloat(d3.select(this).attr("x")) + xScale.rangeBand() / 2;
+       var yPosition = parseFloat(d3.select(this).attr("y")) + 14;
+          d3.select(this)
+            .attr("fill", "orange");
+
+            //Create the tooltip label
+            svg.append("text")
+              .attr("id", "tooltip")
+              .attr("x", xPosition)
+              .attr("y", yPosition)
+              .attr("text-anchor", "middle")
+              .attr("font-family", "sans-serif")
+              .attr("font-size", "12px")
+              .attr("font-weight", "bold")
+              .attr("fill", "white")
+              .text(d);
+          })
+      .on("mouseout", function(d) {
+            d3.select(this)
+              .transition()
+              .duration(250)
+              .attr("fill", "rgb(0, 0, " + (d * 10) + ")");
+            //Remove the tooltip
+            d3.select("#tooltip").remove();
+    })
+      .on("click", function() {
+            sortBars();
+    })
 
 
 
